Document PPDG/src/objects/Teller_Function_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Always_Show__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Always Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Execute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto execute the stage when it is loaded - so user does not have to press the next button manually
added as part of: Change Set: Engage Fixes: 11/06/2015</description>
        <label>Auto Execute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failure_Button_Title__c</fullName>
        <label>Failure Button Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_On_Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep On Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_Section_Name__c</fullName>
        <label>Mapping Section Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_Stage_Name__c</fullName>
        <label>Mapping Stage Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Button_Title__c</fullName>
        <label>Next Button Title</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Button_Routing__c</fullName>
        <label>Previous Button Routing</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Button_Title__c</fullName>
        <label>Previous Button Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Type__c</fullName>
        <label>Print Type</label>
        <picklist>
            <picklistValues>
                <fullName>Before host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After host</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Function__c</fullName>
        <label>Process Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Previous_Button__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Previous Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Order__c</fullName>
        <label>Stage Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Successful_Page_Routing__c</fullName>
        <label>Successful Page Routing</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teller_Function_Root__c</fullName>
        <label>Teller_Function_Root</label>
        <referenceTo>Teller_Function_Root__c</referenceTo>
        <relationshipLabel>Teller Function Stages</relationshipLabel>
        <relationshipName>Teller_Function_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Teller Function Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Always_Show__c</columns>
        <columns>Keep_On_Screen__c</columns>
        <columns>Auto_Execute__c</columns>
        <columns>Process_Function__c</columns>
        <columns>Teller_Function_Root__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Teller Function Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Function Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>